# InfiniteConspiracy

./: .gitignore  ANSWER_EXTRACTION_FIX.md  ARCHITECTURE_CLARIFICATION.md  ASSESSMENT_SUMMARY.md  CLEANUP_SUMMARY.md  CONSPIRACY_IMPLEMENTATION_STATUS.md  CONSPIRACY_SUMMARY.md  CONSPIRACY_SYSTEM_PROGRESS.md  CONTRACT_ANSWER_FORMAT_UPDATE.md  DOCUMENT_TYPE_FIX_SUMMARY.md  FIXES_SUMMARY.md  LICENSE  MILESTONE-2-PLAN.md  PATH_FIX_SUMMARY.md  PIPELINE_ASSESSMENT.md  PROJECT_STATUS.md  README.md  SETUP.md  main.py  pyproject.toml
backend/: ASSESSMENT_SUMMARY.md  BACKEND_ASSESSMENT_REPORT.md  FIXES_NEEDED.md  MULTI_HOP_VALIDATION_IMPLEMENTED.md  README_ASSESSMENT.md  contract_addresses.json  debug_validation.py  demo_shadow_validation.py  env.example  requirements.txt  test_conspiracy_foundation.py  test_conspiracy_full.py  test_discover_all.py  test_doc_types_simple.py  test_document_type_diversity.py  test_e2e_conspiracy_arkiv.py  test_multi_hop_validation.py  test_narrative_contamination.py  test_new_architecture.py  test_push_conspiracy.py  test_push_conspiracy_semantic.py  test_query_arkiv.py  test_refactored_conspiracy.py  test_setup.py
backend/config/: cipher_configs.json  document_types.json  narrator_config.yaml
backend/docs/: ARKIV_ATTRIBUTES_DESIGN.md  BACKEND_OVERVIEW.md  E2E_TESTING_GUIDE.md  INSTALLATION.md  (+4 more)
contracts/: hardhat.config.js  package-lock.json  package.json
docs/: ARCHITECTURE.md  ARKIV_INTEGRATION.md  ENV_VARIABLES_GUIDE.md  FRONTEND_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_DEPLOYMENT.md  SMART_CONTRACT.md  TESTNET_DEPLOYMENT_GUIDE.md
(+110 files in other folders)
