[project]
name = "investigation-backend"
version = "0.1.0"
description = "Infinite Conspiracy: A Self-Evolving Detective ARG with multi-hop reasoning and blockchain integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Infinite Conspiracy Team"}
]
keywords = ["blockchain", "detective", "arg", "mystery", "llm", "arkiv", "kusama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "arkiv-sdk>=1.0.0a5",
    "replicate>=0.15.0",
    "openai>=1.10.0",
    "web3>=6.15.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''
